# procastimarks

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  vision.md
.devcontainer/: Dockerfile  devcontainer.json
app/: Cargo.toml
app/src/: app.rs  lib.rs  main.rs  metadata.rs  session.rs
app/src/components/: add_bookmark_form.rs  bookmarklet.rs  mod.rs
app/src/domain/: mod.rs
app/src/middleware/: auth.rs
app/src/persistence/: mod.rs  repository.rs  schema.rs
app/src/routes/: health.rs
app/src/server_fns/: mod.rs
app/tests/: auth_test.rs  health_test.rs
src/docs/arc42/: arc42.adoc
src/docs/arc42/chapters/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_context_and_scope.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc
src/docs/reviews/: atam-review.adoc
src/docs/specs/: acceptance-criteria.adoc  activity-diagrams.adoc  index.adoc  prd.adoc  use-cases.adoc
